//! Functions for converting between CasperLabs types and their Protobuf equivalents which are
//! defined in protobuf/io/casperlabs/ipc/ipc.proto

mod bond;
mod deploy_item;
mod deploy_result;
mod executable_deploy_item;
mod execute_request;
mod execution_effect;
mod genesis_account;
mod genesis_config;
mod query_request;
mod upgrade_request;
mod wasm_costs;
